Fix button display and z-index

--- a/hypha/static_src/src/sass/apply/components/_button.scss
+++ b/hypha/static_src/src/sass/apply/components/_button.scss
@@ -98,6 +98,7 @@
 
     &--cookieconsent {
         @include button(transparent, $color--white);
+        display: inline;
 
         &:focus,
         &:hover {
